--- a/Taskman/MainWin.glade
+++ b/Taskman/MainWin.glade
@@ -6,7 +6,9 @@
   <object class="GtkTreeModelFilter" id="TreeFilter">
     <property name="child_model">TaskStore</property>
   </object>
+  <object class="GtkAccelGroup" id="accels"/>
   <object class="GtkActionGroup" id="actiongroup1">
+    <property name="accel_group">accels</property>
     <child>
       <object class="GtkAction" id="actNewTask">
         <property name="label" translatable="yes">Nueva _tarea</property>
@@ -134,6 +136,9 @@
     <property name="can_focus">False</property>
     <property name="title" translatable="yes">Task Manager</property>
     <property name="icon_name">document-open-recent</property>
+    <accel-groups>
+      <group name="accels"/>
+    </accel-groups>
     <child>
       <object class="GtkBox" id="box1">
         <property name="visible">True</property>
