--- a/Taskman/MainWin.glade
+++ b/Taskman/MainWin.glade
@@ -2,6 +2,11 @@
 <!-- Generated with glade 3.18.3 -->
 <interface>
   <requires lib="gtk+" version="3.12"/>
+  <object class="GtkFileFilter" id="FileFilter">
+    <patterns>
+      <pattern>*.tm</pattern>
+    </patterns>
+  </object>
   <object class="GtkTreeStore" id="TaskStore"/>
   <object class="GtkTreeModelFilter" id="TreeFilter">
     <property name="child_model">TaskStore</property>
@@ -684,10 +689,5 @@
       <action-widget response="-8">button1</action-widget>
       <action-widget response="-9">button2</action-widget>
     </action-widgets>
-  </object>
-  <object class="GtkFileFilter" id="task_man_files">
-    <mime-types>
-      <mime-type>*.tm</mime-type>
-    </mime-types>
   </object>
 </interface>
