--- a/Taskman/MainWin.glade
+++ b/Taskman/MainWin.glade
@@ -822,7 +822,7 @@
           <object class="GtkLabel" id="label1">
             <property name="visible">True</property>
             <property name="can_focus">False</property>
-            <property name="label" translatable="yes">¿Guardar cambios es el archivo?</property>
+            <property name="label" translatable="yes">¿Guardar cambios en el archivo?</property>
           </object>
           <packing>
             <property name="expand">False</property>
